feat: updated discalimer timer

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 
         <div class="disclaimer">
             <strong>Note:</strong> These rates are gathered and refreshed in real time, reflecting live changes across multiple exchange platforms. We've implemented systems to reduce lag and ensure data fidelity, so what you see is closely aligned with current trading values. This level of synchronization is ideal for anyone needing accurate benchmarks in a fast-paced environment.
-            <br>Last updated: <span id="current-time">--</span>
+            <!-- <br>Last updated: <span id="current-time">--</span> -->
         </div>
     </div>
 
